Make initialization promises readonly and add agenda item links
Marked initialization promises as readonly in PapersStore and MeetingsStore for improved safety. Added links to agenda items in Consultations with proper validation to enhance user navigation. Adjusted CSS styles and minor formatting changes in GitHub Actions workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
   # Runs at 03:00 UTC every day
   schedule:
-    - cron: '0 3 * * *'
+    - cron: "0 3 * * *"
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
