--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,10 @@ on:
   # Using a different branch name? Replace `main` with your branch’s name
   push:
     branches: [main]
-  # Runs at 03:00 UTC every day
+  # Runs at 03:00 and 15:00 UTC every day
   schedule:
     - cron: "0 3 * * *"
+    - cron: "0 15 * * *"
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
