--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
+    "build:quick": "SKIP_PAGEFIND=1 astro build",
     "preview": "astro preview",
     "astro": "astro",
     "format": "npx prettier . --write"
