Add saved searches feature with UI components and Pagefind integration
- Introduced a saved searches feature, including UI for managing, displaying, and searching stored queries.
- Implemented shared utilities for handling saved searches and Pagefind configuration.
- Enhanced navigation with a link to the saved searches page.
- Added Astro page components for saved searches and search results.
- Integrated Pagefind for search query resolution and result counts.
- Added a build script to ensure Pagefind index availability when required.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "predev": "node scripts/ensure-pagefind-index.mjs",
     "dev": "astro dev",
+    "prestart": "node scripts/ensure-pagefind-index.mjs",
     "start": "astro dev",
     "build": "astro build",
     "build:quick": "SKIP_PAGEFIND=1 astro build",
